--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -5,8 +5,13 @@
     "declaration": true,
     "module": "NodeNext",
     "rootDir": "./src",
-    "composite": true
+    "composite": true // 이미 설정되어 있음
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "references": [
+    {
+      "path": "../types" // types 패키지 참조 추가
+    }
+  ]
 }
