--- a/turbo.json
+++ b/turbo.json
@@ -8,13 +8,15 @@
     },
     "dev": {
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "dependsOn": ["^build"] 
     },
     "test": {
       "dependsOn": ["build"],
       "outputs": ["coverage/**"]
     },
     "lint": {
+      "dependsOn": ["^build"],
       "outputs": []
     },
     "clean": {
