--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -9,7 +9,8 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.js"
-    }
+    },
+    "./src/*": "./src/*"
   },
   "scripts": {
     "build": "tsc --build",
