--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "chart-library",
+  "name": "charts-library",
   "private": true,
   "scripts": {
-    "build": "turbo run build",
-    "build:deps": "turbo run build --filter=./packages/types --filter=./packages/core",
-    "dev": "turbo run dev",
-    "dev:playground": "pnpm run build:deps && turbo run dev --filter=playground",
-    "dev:with-deps": "pnpm run build:deps && turbo run dev",
-    "test": "turbo run test",
-    "lint": "turbo run lint",
-    "clean": "turbo run clean",
+    "build": "lerna run build",
+    "build:deps": "lerna run build --scope=@charts-library/types --scope=@charts-library/core",
+    "dev": "lerna run dev --parallel",
+    "dev:playground": "pnpm run build:deps && lerna run dev --scope=playground",
+    "dev:with-deps": "pnpm run build:deps && lerna run dev --parallel",
+    "test": "lerna run test",
+    "lint": "lerna run lint",
+    "clean": "lerna run clean",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build --filter=./packages/* && changeset publish",
+    "release": "lerna run build --scope='@charts-library/*' && changeset publish",
     "fresh": "pnpm run clean && pnpm install && pnpm run build",
     "bootstrap": "pnpm install && pnpm run build:deps"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
-    "turbo": "^1.10.0",
-    "typescript": "^5.0.0",
-    "@types/node": "^20.0.0"
+    "@types/node": "^20.0.0",
+    "lerna": "^8.2.4",
+    "typescript": "^5.0.0"
   },
   "packageManager": "pnpm@8.6.0"
 }
