--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build:deps": "lerna run build --scope=@charts-library/types --scope=@charts-library/core",
     "build:vercel": "lerna run build",
     "dev": "lerna run dev --parallel",
-    "dev:playground": "pnpm run build:deps && lerna run dev --scope=playground",
+    "dev:playground": "lerna run dev --scope=@charts-library/* --scope=playground --parallel",
     "dev:with-deps": "pnpm run build:deps && lerna run dev --parallel",
     "test": "lerna run test",
     "lint": "lerna run lint",
