--- a/lerna.json
+++ b/lerna.json
@@ -3,22 +3,30 @@
   "version": "independent",
   "npmClient": "pnpm",
   "packages": [
-    "packages/*",
-    "apps/*"
+    "packages/*"
   ],
   "command": {
     "version": {
       "conventionalCommits": true,
       "changelogPreset": "angular",
-      "message": "chore(release): publish"
+      "message": "chore(release): publish",
+      "allowBranch": ["main", "master"],
+      "ignoreChanges": [
+        "**/__tests__/**",
+        "**/*.test.ts",
+        "**/*.test.tsx",
+        "**/*.md"
+      ]
     },
     "publish": {
       "registry": "https://registry.npmjs.org/",
       "ignoreChanges": [
         "**/__tests__/**",
         "**/*.test.ts",
+        "**/*.test.tsx",
         "**/*.md"
-      ]
+      ],
+      "message": "chore(release): publish"
     },
     "run": {
       "npmClient": "pnpm"
