--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
   "name": "charts-library",
   "private": true,
+  "version": "1.0.0",
+  "description": "A modern chart library built with D3.js and React",
   "scripts": {
     "build": "lerna run build",
     "build:deps": "lerna run build --scope=@charts-library/types --scope=@charts-library/core",
-    "build:vercel": "lerna run build",
     "dev": "lerna run dev --parallel",
-    "dev:playground": "lerna run dev --scope=@charts-library/* --scope=playground --parallel",
-    "dev:with-deps": "pnpm run build:deps && lerna run dev --parallel",
     "test": "lerna run test",
     "lint": "lerna run lint",
     "clean": "lerna run clean",
-    "changeset": "changeset",
-    "version-packages": "changeset version",
-    "release": "lerna run build --scope='@charts-library/*' && changeset publish",
     "fresh": "pnpm run clean && pnpm install && pnpm run build",
-    "bootstrap": "pnpm install && pnpm run build:deps"
+    "bootstrap": "pnpm install && pnpm run build:deps",
+    "version": "lerna version --conventional-commits",
+    "publish": "lerna run build && lerna publish from-package",
+    "publish:canary": "lerna publish --canary --preid canary --dist-tag canary"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.26.0",
     "@types/node": "^20.0.0",
     "lerna": "^8.2.4",
     "typescript": "^5.0.0"
   },
-  "packageManager": "pnpm@8.6.0"
+  "packageManager": "pnpm@8.6.0",
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=8.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/taehyeon3657/chartLibrary.git"
+  },
+  "author": "TaeHyeon",
+  "license": ""
 }
