--- a/packages/charts/package.json
+++ b/packages/charts/package.json
@@ -78,5 +78,6 @@
   "devDependencies": {
     "@types/d3": "^7.4.3",
     "typescript": "^5.0.0"
-  }
+  },
+  "gitHead": "e6a85cf539e5fc6461dd192461c531fd91b2b12c"
 }
