--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -70,5 +70,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.0.0"
-  }
+  },
+  "gitHead": "e6a85cf539e5fc6461dd192461c531fd91b2b12c"
 }
