refactor: 빌드 스크립트를 lerna에서 pnpm으로 변경

--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "version": "1.0.0",
   "description": "A modern chart library built with D3.js and React",
   "scripts": {
-    "build": "lerna run build",
-    "build:vercel": "lerna run build --scope=@charts-library/types --scope=@charts-library/core --scope=@charts-library/charts --scope=@charts-library/react && cd apps/playground && pnpm run build",
-    "build:deps": "lerna run build --scope=@charts-library/types --scope=@charts-library/core --scope=@charts-library/charts --scope=@charts-library/react",
-    "dev": "lerna run dev --parallel",
+    "build": "pnpm -r --filter='./packages/*' run build",
+    "build:vercel": "pnpm --filter=@charts-library/types --filter=@charts-library/core --filter=@charts-library/charts --filter=@charts-library/react run build && cd apps/playground && pnpm run build",
+    "build:deps": "pnpm --filter=@charts-library/types --filter=@charts-library/core --filter=@charts-library/charts --filter=@charts-library/react run build",
+    "dev": "pnpm -r --parallel run dev",
     "dev:playground": "cd apps/playground && pnpm run dev",
-    "test": "lerna run test",
-    "lint": "lerna run lint",
-    "clean": "lerna run clean",
+    "test": "pnpm -r run test",
+    "lint": "pnpm -r run lint",
+    "clean": "pnpm -r run clean",
     "fresh": "pnpm run clean && pnpm install && pnpm run build",
     "bootstrap": "pnpm install && pnpm run build:deps",
     "version": "lerna version --conventional-commits",
-    "publish": "lerna run build && lerna publish from-package",
+    "publish": "pnpm run build && lerna publish from-package",
     "publish:canary": "lerna publish --canary --preid canary --dist-tag canary"
   },
   "devDependencies": {
