--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@charts-library/react": "workspace:*",
     "@charts-library/types": "workspace:*",
+    "lucide-react": "^0.548.0",
     "next": "14.2.30",
     "react": "^18",
     "react-dom": "^18"
