--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -37,7 +37,7 @@
     "hooks",
     "typescript"
   ],
-  "author": "Your Name",
+  "author": "TaeHyeon",
   "license": "MIT",
   "repository": {
     "type": "git",
