fix: private => public으로 변경

--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -1,7 +1,9 @@
 {
   "name": "playground",
   "version": "0.1.0",
-  "private": true,
+   "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
