--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,14 +1,13 @@
 {
   "name": "@beaubrain/react",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "React components for charts library",
   "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
+      "import": "./dist/index.js",
       "require": "./dist/index.js"
     }
   },
