fix: react package tsup 라이브러리를 이용하여 esm/commonJS 둘다 build되도록 double packaging 적용

--- a/packages/react/tsconfig.build.json
+++ b/packages/react/tsconfig.build.json
@@ -7,6 +7,6 @@
     "emitDeclarationOnly": false, // JS와 DTS 같이 생성
     "outDir": "./dist"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.test.tsx"]
 }
