--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,13 +2,14 @@
   "name": "@beaubrain/react",
   "version": "0.3.2",
   "description": "React components for charts library",
-  "main": "./dist/index.js",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.js"
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
     }
   },
   "files": [
@@ -17,7 +18,8 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc --project tsconfig.build.json",
+    "build": "pnpm run clean && pnpm run build:tsup",
+    "build:tsup": "tsup src/index.tsx --format cjs,esm --dts --out-dir dist --splitting=false --target es2020 --tsconfig packages/react/tsconfig.build.json",
     "clean": "rm -rf dist",
     "lint": "eslint src --ext .ts,.tsx",
     "prepublishOnly": "pnpm run build"
@@ -68,7 +70,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.0.0"
+    "tsup": "^8.5.1",
+    "typescript": "^5.0.2"
   },
   "gitHead": "528ac36b42331720695b5aa17d6ef7ebc7dca2e1"
 }
