--- a/packages/charts/package.json
+++ b/packages/charts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@beaubrain/charts",
+  "name": "@beaubrain/chart-lib-charts",
   "version": "1.2.0",
   "description": "Chart implementations for charts library",
   "main": "dist/index.js",
@@ -69,8 +69,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@beaubrain/core": "^1.2.0",
-    "@beaubrain/types": "^1.2.0"
+    "@beaubrain/chart-lib-core": "^1.2.0",
+    "@beaubrain/chart-lib-types": "^1.2.0"
   },
   "peerDependencies": {
     "d3": "^7.0.0"
