--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@beaubrain/react",
+  "name": "@beaubrain/chart-lib-react",
   "version": "0.3.2",
   "description": "React components for charts library",
   "main": "./dist/cjs/index.js",
@@ -53,8 +53,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@beaubrain/charts": "^1.2.0",
-    "@beaubrain/types": "^1.2.0"
+    "@beaubrain/chart-lib-charts": "^1.2.0",
+    "@beaubrain/chart-lib-types": "^1.2.0"
   },
   "peerDependencies": {
     "react": "^18.0.0",
