--- a/packages/types/package/package.json
+++ b/packages/types/package/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@beaubrain/types",
+  "name": "@beaubrain/chart-lib-types",
   "version": "1.1.0",
   "description": "TypeScript type definitions for charts library",
   "main": "dist/index.js",
