--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,14 +2,14 @@
   "name": "@beaubrain/chart-lib-react",
   "version": "0.4.0",
   "description": "React components for charts library",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
     }
   },
   "files": [
