--- a/packages/charts/package.json
+++ b/packages/charts/package.json
@@ -2,32 +2,33 @@
   "name": "@beaubrain/chart-lib-charts",
   "version": "1.3.0",
   "description": "Chart implementations for charts library",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
+      "import": "./dist/index.mjs",
       "require": "./dist/index.js"
     },
     "./line": {
       "types": "./dist/line/index.d.ts",
-      "import": "./dist/line/index.js",
+      "import": "./dist/line/index.mjs",
       "require": "./dist/line/index.js"
     },
     "./bar": {
       "types": "./dist/bar/index.d.ts",
-      "import": "./dist/bar/index.js",
+      "import": "./dist/bar/index.mjs",
       "require": "./dist/bar/index.js"
     },
     "./pie": {
       "types": "./dist/pie/index.d.ts",
-      "import": "./dist/pie/index.js",
+      "import": "./dist/pie/index.mjs",
       "require": "./dist/pie/index.js"
     },
     "./shared": {
       "types": "./dist/shared/index.d.ts",
-      "import": "./dist/shared/index.js",
+      "import": "./dist/shared/index.mjs",
       "require": "./dist/shared/index.js"
     }
   },
@@ -37,9 +38,9 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc --build",
-    "dev": "tsc --build --watch",
-    "clean": "rm -rf dist tsconfig.tsbuildinfo",
+    "build": "pnpm run clean && tsup",
+    "clean": "rm -rf dist",
+    "dev": "tsup --watch",
     "prepublishOnly": "pnpm run build"
   },
   "keywords": [
@@ -77,6 +78,7 @@
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
+    "tsup": "^8.5.1",
     "typescript": "^5.0.0"
   },
   "gitHead": "528ac36b42331720695b5aa17d6ef7ebc7dca2e1"
