--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,12 +2,13 @@
   "name": "@beaubrain/chart-lib-core",
   "version": "1.3.0",
   "description": "Core functionality for charts library",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
+      "import": "./dist/index.mjs",
       "require": "./dist/index.js"
     }
   },
@@ -17,9 +18,9 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc --build",
-    "dev": "tsc --build --watch",
-    "clean": "rm -rf dist tsconfig.tsbuildinfo",
+    "build": "pnpm run clean && tsup",
+    "clean": "rm -rf dist",
+    "dev": "tsup --watch",
     "prepublishOnly": "pnpm run build"
   },
   "keywords": [
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
+    "tsup": "^8.5.1",
     "typescript": "^5.0.0"
   },
   "gitHead": "528ac36b42331720695b5aa17d6ef7ebc7dca2e1"
