fix: d3에 의존하는 package dual packaging되도록 수정

--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,9 @@ yarn-error.log*
 
 
 # =========================================
-# Build Artifacts
+# Build Outputs
 # =========================================
-# 'core' 패키지에서 사용되는 것과 같은 빌드 결과물 폴더를 무시합니다.
+# 빌드 결과물인 dist 폴더를 무시합니다.
 dist
 **/dist
 
