--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,11 +1,11 @@
 {
-  "extends": "../../tsconfig.base.json", 
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./dist",
     "declaration": true,
-    "module": "NodeNext",
+    "module": "es2015",
     "rootDir": "./src",
-    "composite": true    
+    "composite": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
