--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,19 @@
 {
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true,
   "editor.rulers": [140],
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
   "files.trimTrailingWhitespace": true,
   "eslint.enable": true,
   "javascript.preferences.quoteStyle": "single",
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
-  "jira-plugin.workingProject": ""
+  "eslint.workingDirectories": [
+  { "directory": "./packages/charts", "changeProcessCWD": true },
+  { "directory": "./packages/core", "changeProcessCWD": true },
+  { "directory": "./packages/react", "changeProcessCWD": true },
+  { "directory": "./packages/types", "changeProcessCWD": true }
+],
+"jira-plugin.workingProject": ""
 }
