fix: lerna md파일 수정시 version업데이트 되도록 수정

--- a/lerna.json
+++ b/lerna.json
@@ -14,8 +14,7 @@
       "ignoreChanges": [
         "**/__tests__/**",
         "**/*.test.ts",
-        "**/*.test.tsx",
-        "**/*.md"
+        "**/*.test.tsx"
       ]
     },
     "publish": {
@@ -23,8 +22,7 @@
       "ignoreChanges": [
         "**/__tests__/**",
         "**/*.test.ts",
-        "**/*.test.tsx",
-        "**/*.md"
+        "**/*.test.tsx"
       ],
       "message": "chore(release): publish"
     },
